# smiles-encoder

./: LICENSE  README.md  compounds.csv  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml
examples/: example.ipynb
smiles_encoder/: __init__.py  encoder.py  version.py
