[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smiles_encoder"
version = "0.1.1"
authors = [
    { name="Travis Kessler", email="travis.j.kessler@gmail.com" },
]
description = "One-hot encoding for simple molecular-input line-entry system (SMILES) strings"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tjkessler/smiles-encoder"
"Bug Tracker" = "https://github.com/tjkessler/smiles-encoder/issues"